<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ff022562"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/copy_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="12.0dip"
        android:text="@string/copyright"
        android:textColor="#ffffffff"
        android:textSize="11.0sp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:layout_width="100.0dip"
                    android:layout_height="100.0dip"
                    android:src="@drawable/pic_ic_launcher" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6.0dip"
                    android:text="@string/app_name"
                    android:textColor="#ffffffff"
                    android:textSize="24.0sp" />

                <TextView
                    android:id="@+id/tv_version_name"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="6.0dip"
                    android:gravity="bottom"
                    android:text="\ 455"
                    android:textColor="#ffffffff"
                    android:textSize="14.0sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:layout_marginLeft="20.0dip"
                android:layout_marginRight="20.0dip"
                android:background="#ffdddddd" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="6.0dip"
                android:text="@string/open_title"
                android:textColor="#ffffffff"
                android:textSize="13.0sp" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>